Bug 345669 - The loan wizard loses the currency of the loan if a new payee is created for the loan
Summary: The loan wizard loses the currency of the loan if a new payee is created for ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-29 17:59 UTC by Cristian Oneț
Modified: 2015-03-29 18:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2015-03-29 17:59:39 UTC
If a loan is created in a different currency than the base currency and a new payee is created for the loan then the currency of the loan ends up being the base currency instead of the originally selected currency.

Reproducible: Always

Steps to Reproduce:
1. Open a file with EUR base currency
2. Create a loan account and select USD as the currency
3. On the next page create a new payee
4. Enter the loan information

Actual Results:  
The amounts computed after entering the loan information are in EUR instead of USD, on the first page it can be seen that the USD currency selection is lost.

Expected Results:  
The amounts computed after entering the loan information are in USD, on the first page it can be seen that the USD currency selection is kept.

Found this while working on BUG 325793.
Comment 1 Cristian Oneț 2015-03-29 18:24:02 UTC
Git commit aa330f9412c90f5161ff5b91f330cbc031a3f8c8 by Cristian Oneț.
Committed on 29/03/2015 at 18:20.
Pushed by conet into branch 'master'.

Fix the loan wizard losing the currency of the loan.

If a loan is created in a different currency than the base currency
and a new payee is created for the loan then the currency of the
loan ends up being the base currency instead of the originally
selected currency.

This bug was caused by some code which didn't made any sense (set an
invalid selection in the currency combo upon file change) so I just
removed it to fix the problem.

M  +0    -6    kmymoney/wizards/newaccountwizard/knewaccountwizard.cpp
M  +0    -1    kmymoney/wizards/newaccountwizard/knewaccountwizard_p.h

http://commits.kde.org/kmymoney/aa330f9412c90f5161ff5b91f330cbc031a3f8c8
Comment 2 Cristian Oneț 2015-03-29 18:25:10 UTC
Git commit 22bb28ada10f5844084a2c6ee1c864262d2fa62a by Cristian Oneț.
Committed on 29/03/2015 at 18:20.
Pushed by conet into branch '4.7'.

Fix the loan wizard losing the currency of the loan.

If a loan is created in a different currency than the base currency
and a new payee is created for the loan then the currency of the
loan ends up being the base currency instead of the originally
selected currency.

This bug was caused by some code which didn't made any sense (set an
invalid selection in the currency combo upon file change) so I just
removed it to fix the problem.
(cherry picked from commit aa330f9412c90f5161ff5b91f330cbc031a3f8c8)

M  +0    -6    kmymoney/wizards/newaccountwizard/knewaccountwizard.cpp
M  +0    -1    kmymoney/wizards/newaccountwizard/knewaccountwizard_p.h

http://commits.kde.org/kmymoney/22bb28ada10f5844084a2c6ee1c864262d2fa62a